--- a/ereuse_devicehub/templates/ereuse_devicehub/base.html
+++ b/ereuse_devicehub/templates/ereuse_devicehub/base.html
@@ -19,12 +19,14 @@
 
   <!-- JS Files -->
   <script src="{{ url_for('static', filename='js/jquery-3.6.0.min.js') }}"></script>
-  <script src="{{ url_for('static', filename='js/simple-datatables-5.0.3.js') }}"></script>
+  <script src="https://cdn.jsdelivr.net/npm/simple-datatables@5.0.3" type="text/javascript"></script>
+
+
 
   <!-- Vendor CSS Files -->
   <link href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
   <link href="{{ url_for('static', filename='vendor/bootstrap-icons/bootstrap-icons.css') }}" rel="stylesheet">
-  <link href="{{ url_for('static', filename='css/simple-datatables.css') }}" rel="stylesheet" type="text/css">
+  <link href="https://cdn.jsdelivr.net/npm/simple-datatables@5.0.3/dist/style.css" rel="stylesheet" type="text/css">
 
 
   <!-- Template Main CSS File -->
