--- a/ereuse_devicehub/templates/inventory/device_detail.html
+++ b/ereuse_devicehub/templates/inventory/device_detail.html
@@ -81,6 +81,12 @@
               <button class="nav-link" data-bs-toggle="tab" data-bs-target="#components">Components</button>
             </li>
 
+            {% if placeholder.binding %}
+            <li class="nav-item">
+              <button class="nav-link" data-bs-toggle="tab" data-bs-target="#dpps">Digital Passports</button>
+            </li>
+            {% endif %}
+
           </ul>
           <div class="tab-content pt-2">
 
@@ -265,6 +271,32 @@
               </div>
               {% endif %}
             </div>
+
+            {% if placeholder.binding %}
+            <div class="tab-pane fade profile-overview" id="dpps">
+              <h5 class="card-title">Digital Passports</h5>
+              <div class="list-group col-12">
+                {% for dpp in placeholder.binding.dpps %}
+                <div class="list-group-item d-flex justify-content-between align-items-center">
+                  <div class="row">
+                  <div class="col-12">
+                  <div class="d-flex w-100 justify-content-between">
+                    <h5 class="mb-1">Time Stamp</h5>
+                    <small class="text-muted">{{ dpp.timestamp }}</small>
+                  </div>
+                  <div class="col-12">
+                  <p class="mb-1">
+                    <a href="{{ url_for('Did.DidView', dpp=dpp.key) }}" target="_blank">{{ dpp.key }}</a><br />
+                  </p>
+                  <small class="text-muted">{{ dpp.created.strftime('%H:%M %d-%m-%Y') }}</small>
+                  </div>
+                  </div>
+                </div>
+                {% endfor %}
+              </div>
+            </div>
+            {% endif %}
+
         </div>
       </div>
     </div>
