fix customer name in pdf

--- a/ereuse_devicehub/templates/inventory/erasure.html
+++ b/ereuse_devicehub/templates/inventory/erasure.html
@@ -101,7 +101,7 @@
               Name:
             </td>
             <td style="width:80%;">
-              <span>{{ ustomer_details and customer_details.company_name or ''}}</span>
+              <span>{{ customer_details and customer_details.company_name or ''}}</span>
             </td>
           </tr>
           <tr style="padding-top:5px;">
