fix with last lot incoming

--- a/ereuse_devicehub/templates/inventory/erasure.html
+++ b/ereuse_devicehub/templates/inventory/erasure.html
@@ -161,7 +161,7 @@
           {% if erasure_hosts %}
           <tr style="padding-top:5px;">
             <td style="width:20%;">
-              <span>SNs; of sanitization server {{ erasure_hosts|length }}:</span>
+              <span>SNs of sanitization server:</span>
             </td>
             <td style="width:80%;">
             {% for e in erasure_hosts %}
