--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -516,13 +516,13 @@
               </div>
               {% if lot and not lot.is_temporary %}
               <div id="trade-documents-list" class="tab-pane fade trade-documents-list">
-              <div class="btn-group dropdown ml-1 mt-1" uib-dropdown="">
-                <a href="{{ url_for('inventory.trade_document_add', lot_id=lot.id)}}" class="btn btn-primary">
-                  <i class="bi bi-plus"></i>
-                  Add new document
-                  <span class="caret"></span>
-                </a>
-              </div>
+                <div class="btn-group dropdown ml-1 mt-1" uib-dropdown="">
+                  <a href="{{ url_for('inventory.trade_document_add', lot_id=lot.id)}}" class="btn btn-primary">
+                    <i class="bi bi-plus"></i>
+                    Add new document
+                    <span class="caret"></span>
+                  </a>
+                </div>
 
                 <h5 class="card-title">Documents</h5>
                 <table class="table">
@@ -565,6 +565,15 @@
                 </table>
               </div>
               <div id="edit-transfer" class="tab-pane fade edit-transfer">
+                {% if form_transfer.date.data %}
+                <div class="btn-group dropdown ml-1 mt-1" uib-dropdown="">
+                  <a href="{{ url_for('inventory.open_transfer', lot_id=lot.id)}}" class="btn btn-primary">
+                    <i class="bi bi-plus"></i>
+                    Reopen a transfer
+                    <span class="caret"></span>
+                  </a>
+                </div>
+                {% endif %}
                 <h5 class="card-title">Transfer</h5>
                 <form method="post" action="{{ url_for('inventory.edit_transfer', lot_id=lot.id) }}" class="row g-3 needs-validation" novalidate>
                   {{ form_transfer.csrf_token }}
