--- a/ereuse_devicehub/templates/inventory/erasure.html
+++ b/ereuse_devicehub/templates/inventory/erasure.html
@@ -288,10 +288,10 @@
           {% for erasure in erasures %}
           <tr style="border-bottom: 1px dashed #000;">
             <td>
-              {{ erasure.device.serial_number.upper() }}
+              {{ erasure.device.serial_number and erasure.device.serial_number.upper() or '' }}
             </td>
             <td>
-              {{ erasure.parent.serial_number.upper() }}
+              {{ erasure.parent.serial_number and erasure.parent.serial_number.upper() or '' }}
             </td>
             <td>
               {{ erasure.get_public_name() }}
