fix names of titles

--- a/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
+++ b/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
@@ -73,7 +73,7 @@
           </li>
           <li>
             <a class="dropdown-item d-flex align-items-center" href="{{ url_for('inventory.device_erasure_list') }}">
-              <i class="bi bi-tag"></i><span>Data Storage Erasures</span>
+              <i class="bi bi-eraser-fill"></i><span>Drives Sanitization</span>
             </a>
           </li>
         </ul>
