--- a/ereuse_devicehub/templates/inventory/erasure_list.html
+++ b/ereuse_devicehub/templates/inventory/erasure_list.html
@@ -6,7 +6,7 @@
   <nav>
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a href="{{ url_for('inventory.devicelist')}}">Inventory</a></li>
-      <li class="breadcrumb-item active">Erasures disks</li>
+      <li class="breadcrumb-item active">Drive Sanitization</li>
     </ol>
   </nav>
 </div><!-- End Page Title -->
@@ -82,7 +82,7 @@
                   <li>
                     <a href="javascript:export_file('certificates')" class="dropdown-item">
                       <i class="bi bi-eraser-fill"></i>
-                      Erasure Certificate
+                      Device Sanitization
                     </a>
                   </li>
                 </ul>
