--- a/ereuse_devicehub/templates/workbench/settings.html
+++ b/ereuse_devicehub/templates/workbench/settings.html
@@ -20,12 +20,13 @@
           <div class="pt-6 pb-2">
             <div class="row pt-3">
               <div class="col">
+                <h5 class="card-title">Sanitization servers</h5>
                 <form method="post">
                 <table class="table table-hover">
                   <thead>
                     <tr>
                       <th scope="col">PHID</th>
-                      <th scope="col" class="text-center">Erasure Host</th>
+                      <th scope="col" class="text-center">Sanitization Host</th>
                     </tr>
                   </thead>
                   <tbody>
