--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -256,7 +256,7 @@
                   <li>
                     <a href="javascript:export_file('certificates')" class="dropdown-item">
                       <i class="bi bi-eraser-fill"></i>
-                      Erasure Certificate
+                      Device Sanitization
                     </a>
                   </li>
                 </ul>
